# SimpleCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_reference.sh  compiler.pro
Compiler/: bytearray.cpp  bytearray.h  common.cpp  common.h  compiler.cpp  compiler.h  compiler.pro  function.cpp  function.h
Test/: CMakeLists.txt  main.cpp  test.cpp  test.pro
Test/src/: commands.s  commands.txt  main.cpp
x86_64_Compiler/: CMakeLists.txt
x86_64_Compiler/include/x86_64_compiler/: bytearray.hpp  common.hpp  compiler.hpp  function.hpp
x86_64_Compiler/src/: bytearray.cpp  common.cpp  compiler.cpp
